fix image stretch

--- a/assets/themes/3-Jekyll/css/main.css
+++ b/assets/themes/3-Jekyll/css/main.css
@@ -443,7 +443,7 @@ h1+h2,h2+h3,h3+h4,h4+h5,h5+h6{
 }
 .post img{
 	display:block;
-	width:100%;
+	/*width:100%;*/
 	border:4px solid #eee
 }
 .post code{
